parser/parser.output

0: shift/reduce conflict (shift 12(0), red'n 3(0)) on GLOBALDEFS
0: shift/reduce conflict (shift 13(0), red'n 3(0)) on STATIC_IPADDRESS
0: shift/reduce conflict (shift 14(0), red'n 3(0)) on STATIC_ROUTES
0: shift/reduce conflict (shift 15(0), red'n 3(0)) on STATIC_RULES
0: shift/reduce conflict (shift 16(0), red'n 3(0)) on VRRP_SYNC_GROUP
0: shift/reduce conflict (shift 17(0), red'n 3(0)) on VRRP_INSTANCE
0: shift/reduce conflict (shift 18(0), red'n 3(0)) on VRRP_SCRIPT
0: shift/reduce conflict (shift 20(0), red'n 3(0)) on VIRTUAL_SERVER_GROUP
0: shift/reduce conflict (shift 19(0), red'n 3(0)) on VIRTUAL_SERVER
state 0
	$accept: .configuration $end 
	main_statements: .    (3)

	GLOBALDEFS  shift 12
	STATIC_IPADDRESS  shift 13
	STATIC_ROUTES  shift 14
	STATIC_RULES  shift 15
	VRRP_SYNC_GROUP  shift 16
	VRRP_INSTANCE  shift 17
	VRRP_SCRIPT  shift 18
	VIRTUAL_SERVER_GROUP  shift 20
	VIRTUAL_SERVER  shift 19
	.  reduce 3 (src line 31)

	configuration  goto 1
	main_statements  goto 2
	global  goto 3
	static_ipaddress_block  goto 4
	static_routes_block  goto 5
	static_rules_block  goto 6
	vrrp_sync_group_block  goto 7
	vrrp_instance_block  goto 8
	vrrp_script_block  goto 9
	virtual_server_block  goto 10
	virtual_server_group_block  goto 11

state 1
	$accept:  configuration.$end 

	$end  accept
	.  error


 2: reduce/reduce conflict  (red'ns 2 and 3) on $end
2: shift/reduce conflict (shift 12(0), red'n 3(0)) on GLOBALDEFS
2: shift/reduce conflict (shift 13(0), red'n 3(0)) on STATIC_IPADDRESS
2: shift/reduce conflict (shift 14(0), red'n 3(0)) on STATIC_ROUTES
2: shift/reduce conflict (shift 15(0), red'n 3(0)) on STATIC_RULES
2: shift/reduce conflict (shift 16(0), red'n 3(0)) on VRRP_SYNC_GROUP
2: shift/reduce conflict (shift 17(0), red'n 3(0)) on VRRP_INSTANCE
2: shift/reduce conflict (shift 18(0), red'n 3(0)) on VRRP_SCRIPT
2: shift/reduce conflict (shift 20(0), red'n 3(0)) on VIRTUAL_SERVER_GROUP
2: shift/reduce conflict (shift 19(0), red'n 3(0)) on VIRTUAL_SERVER
state 2
	configuration:  main_statements.configuration 
	configuration:  main_statements.    (2)
	main_statements: .    (3)

	GLOBALDEFS  shift 12
	STATIC_IPADDRESS  shift 13
	STATIC_ROUTES  shift 14
	STATIC_RULES  shift 15
	VRRP_SYNC_GROUP  shift 16
	VRRP_INSTANCE  shift 17
	VRRP_SCRIPT  shift 18
	VIRTUAL_SERVER_GROUP  shift 20
	VIRTUAL_SERVER  shift 19
	.  reduce 2 (src line 29)

	configuration  goto 21
	main_statements  goto 2
	global  goto 3
	static_ipaddress_block  goto 4
	static_routes_block  goto 5
	static_rules_block  goto 6
	vrrp_sync_group_block  goto 7
	vrrp_instance_block  goto 8
	vrrp_script_block  goto 9
	virtual_server_block  goto 10
	virtual_server_group_block  goto 11

state 3
	main_statements:  global.    (4)

	.  reduce 4 (src line 32)


state 4
	main_statements:  static_ipaddress_block.    (5)

	.  reduce 5 (src line 33)


state 5
	main_statements:  static_routes_block.    (6)

	.  reduce 6 (src line 34)


state 6
	main_statements:  static_rules_block.    (7)

	.  reduce 7 (src line 35)


state 7
	main_statements:  vrrp_sync_group_block.    (8)

	.  reduce 8 (src line 36)


state 8
	main_statements:  vrrp_instance_block.    (9)

	.  reduce 9 (src line 37)


state 9
	main_statements:  vrrp_script_block.    (10)

	.  reduce 10 (src line 38)


state 10
	main_statements:  virtual_server_block.    (11)

	.  reduce 11 (src line 39)


state 11
	main_statements:  virtual_server_group_block.    (12)

	.  reduce 12 (src line 40)


state 12
	global:  GLOBALDEFS.LB global_statements RB 

	LB  shift 22
	.  error


state 13
	static_ipaddress_block:  STATIC_IPADDRESS.LB address_options RB 

	LB  shift 23
	.  error


state 14
	static_routes_block:  STATIC_ROUTES.LB route_options RB 

	LB  shift 24
	.  error


state 15
	static_rules_block:  STATIC_RULES.LB rule_options RB 

	LB  shift 25
	.  error


state 16
	vrrp_sync_group_block:  VRRP_SYNC_GROUP.STRING LB vrrp_sync_group_statements RB 

	STRING  shift 26
	.  error


state 17
	vrrp_instance_block:  VRRP_INSTANCE.STRING LB vrrp_instance_statements RB 

	STRING  shift 27
	.  error


state 18
	vrrp_script_block:  VRRP_SCRIPT.STRING LB vrrp_script_statements RB 

	STRING  shift 28
	.  error


 19: reduce/reduce conflict  (red'ns 128 and 301) on LB
 19: reduce/reduce conflict  (red'ns 128 and 298) on LB
state 19
	virtual_server_block:  VIRTUAL_SERVER.virtual_server_arg LB virtual_server_statements RB 
	virtual_server_arg: .    (128)
	ipport: .    (301)
	ip46: .    (298)

	IPV4  shift 34
	IPV6  shift 35
	LB  reduce 128 (src line 175)
	GROUP  shift 32
	FWMARK  shift 31
	.  reduce 298 (src line 366)

	ip46  goto 33
	virtual_server_arg  goto 29
	ipport  goto 30

state 20
	virtual_server_group_block:  VIRTUAL_SERVER_GROUP.STRING LB virtual_server_group_statements RB 

	STRING  shift 36
	.  error


state 21
	configuration:  main_statements configuration.    (1)

	.  reduce 1 (src line 29)


22: shift/reduce conflict (shift 39(0), red'n 16(0)) on NOTIFICATION_EMAIL
22: shift/reduce conflict (shift 40(0), red'n 16(0)) on NOTIFICATION_EMAIL_FROM
22: shift/reduce conflict (shift 45(0), red'n 16(0)) on SMTP_SERVER
22: shift/reduce conflict (shift 46(0), red'n 16(0)) on SMTP_CONNECT_TIMEOUT
22: shift/reduce conflict (shift 47(0), red'n 16(0)) on ROUTER_ID
22: shift/reduce conflict (shift 48(0), red'n 16(0)) on LVS_ID
22: shift/reduce conflict (shift 49(0), red'n 16(0)) on VRRP_MCAST_GROUP4
22: shift/reduce conflict (shift 50(0), red'n 16(0)) on VRRP_MCAST_GROUP6
22: shift/reduce conflict (shift 41(0), red'n 16(0)) on VRRP_GARP_MASTER_DELAY
22: shift/reduce conflict (shift 42(0), red'n 16(0)) on VRRP_GARP_MASTER_REPEAT
22: shift/reduce conflict (shift 43(0), red'n 16(0)) on VRRP_GARP_MASTER_REFRESH
22: shift/reduce conflict (shift 44(0), red'n 16(0)) on VRRP_GARP_MASTER_REFRESH_REPEAT
22: shift/reduce conflict (shift 51(0), red'n 16(0)) on VRRP_VERSION
22: shift/reduce conflict (shift 52(0), red'n 16(0)) on ENABLE_SCRIPT_SECURITY
state 22
	global:  GLOBALDEFS LB.global_statements RB 
	global_statement: .    (16)

	NOTIFICATION_EMAIL  shift 39
	NOTIFICATION_EMAIL_FROM  shift 40
	SMTP_SERVER  shift 45
	SMTP_CONNECT_TIMEOUT  shift 46
	ROUTER_ID  shift 47
	LVS_ID  shift 48
	VRRP_MCAST_GROUP4  shift 49
	VRRP_MCAST_GROUP6  shift 50
	VRRP_GARP_MASTER_DELAY  shift 41
	VRRP_GARP_MASTER_REPEAT  shift 42
	VRRP_GARP_MASTER_REFRESH  shift 43
	VRRP_GARP_MASTER_REFRESH_REPEAT  shift 44
	VRRP_VERSION  shift 51
	ENABLE_SCRIPT_SECURITY  shift 52
	.  reduce 16 (src line 46)

	global_statements  goto 37
	global_statement  goto 38

23: shift/reduce conflict (shift 34(0), red'n 259(0)) on IPV4
23: shift/reduce conflict (shift 35(0), red'n 259(0)) on IPV6
23: shift/reduce conflict (shift 56(0), red'n 259(0)) on IP_CIDR
23: shift/reduce conflict (shift 58(0), red'n 259(0)) on DEV
23: shift/reduce conflict (shift 59(0), red'n 259(0)) on SCOPE
23: shift/reduce conflict (shift 57(0), red'n 259(0)) on BRD
23: shift/reduce conflict (shift 34(0), red'n 298(0)) on IPV4
23: shift/reduce conflict (shift 35(0), red'n 298(0)) on IPV6
23: shift/reduce conflict (shift 56(0), red'n 298(0)) on IP_CIDR
 23: reduce/reduce conflict  (red'ns 259 and 298) on RB
23: shift/reduce conflict (shift 58(0), red'n 298(0)) on DEV
23: shift/reduce conflict (shift 59(0), red'n 298(0)) on SCOPE
23: shift/reduce conflict (shift 57(0), red'n 298(0)) on BRD
state 23
	static_ipaddress_block:  STATIC_IPADDRESS LB.address_options RB 
	address_option: .    (259)
	ip46: .    (298)

	IPV4  shift 34
	IPV6  shift 35
	IP_CIDR  shift 56
	DEV  shift 58
	SCOPE  shift 59
	BRD  shift 57
	.  reduce 259 (src line 322)

	ip46  goto 55
	address_options  goto 53
	address_option  goto 54

24: shift/reduce conflict (shift 34(0), red'n 267(0)) on IPV4
24: shift/reduce conflict (shift 35(0), red'n 267(0)) on IPV6
24: shift/reduce conflict (shift 65(0), red'n 267(0)) on IP_CIDR
24: shift/reduce conflict (shift 70(0), red'n 267(0)) on LABEL
24: shift/reduce conflict (shift 69(0), red'n 267(0)) on DEV
24: shift/reduce conflict (shift 73(0), red'n 267(0)) on SCOPE
24: shift/reduce conflict (shift 62(0), red'n 267(0)) on SRC
24: shift/reduce conflict (shift 63(0), red'n 267(0)) on TO
24: shift/reduce conflict (shift 66(0), red'n 267(0)) on VIA
24: shift/reduce conflict (shift 67(0), red'n 267(0)) on GW
24: shift/reduce conflict (shift 68(0), red'n 267(0)) on OR
24: shift/reduce conflict (shift 71(0), red'n 267(0)) on TABLE
24: shift/reduce conflict (shift 72(0), red'n 267(0)) on METRIC
24: shift/reduce conflict (shift 74(0), red'n 267(0)) on BLACKHOLE
24: shift/reduce conflict (shift 34(0), red'n 298(0)) on IPV4
24: shift/reduce conflict (shift 35(0), red'n 298(0)) on IPV6
24: shift/reduce conflict (shift 65(0), red'n 298(0)) on IP_CIDR
 24: reduce/reduce conflict  (red'ns 267 and 298) on RB
24: shift/reduce conflict (shift 70(0), red'n 298(0)) on LABEL
24: shift/reduce conflict (shift 69(0), red'n 298(0)) on DEV
24: shift/reduce conflict (shift 73(0), red'n 298(0)) on SCOPE
24: shift/reduce conflict (shift 62(0), red'n 298(0)) on SRC
24: shift/reduce conflict (shift 63(0), red'n 298(0)) on TO
24: shift/reduce conflict (shift 66(0), red'n 298(0)) on VIA
24: shift/reduce conflict (shift 67(0), red'n 298(0)) on GW
24: shift/reduce conflict (shift 68(0), red'n 298(0)) on OR
24: shift/reduce conflict (shift 71(0), red'n 298(0)) on TABLE
24: shift/reduce conflict (shift 72(0), red'n 298(0)) on METRIC
24: shift/reduce conflict (shift 74(0), red'n 298(0)) on BLACKHOLE
state 24
	static_routes_block:  STATIC_ROUTES LB.route_options RB 
	route_option: .    (267)
	ip46: .    (298)

	IPV4  shift 34
	IPV6  shift 35
	IP_CIDR  shift 65
	LABEL  shift 70
	DEV  shift 69
	SCOPE  shift 73
	SRC  shift 62
	TO  shift 63
	VIA  shift 66
	GW  shift 67
	OR  shift 68
	TABLE  shift 71
	METRIC  shift 72
	BLACKHOLE  shift 74
	.  reduce 267 (src line 331)

	ip46  goto 64
	route_options  goto 60
	route_option  goto 61

25: shift/reduce conflict (shift 77(0), red'n 284(0)) on FROM
25: shift/reduce conflict (shift 78(0), red'n 284(0)) on TO
state 25
	static_rules_block:  STATIC_RULES LB.rule_options RB 
	rule_option: .    (284)

	FROM  shift 77
	TO  shift 78
	.  reduce 284 (src line 349)

	rule_options  goto 75
	rule_option  goto 76

state 26
	vrrp_sync_group_block:  VRRP_SYNC_GROUP STRING.LB vrrp_sync_group_statements RB 

	LB  shift 79
	.  error


state 27
	vrrp_instance_block:  VRRP_INSTANCE STRING.LB vrrp_instance_statements RB 

	LB  shift 80
	.  error


state 28
	vrrp_script_block:  VRRP_SCRIPT STRING.LB vrrp_script_statements RB 

	LB  shift 81
	.  error


state 29
	virtual_server_block:  VIRTUAL_SERVER virtual_server_arg.LB virtual_server_statements RB 

	LB  shift 82
	.  error


state 30
	virtual_server_arg:  ipport.    (129)

	.  reduce 129 (src line 176)


state 31
	virtual_server_arg:  FWMARK.NUMBER 

	NUMBER  shift 83
	.  error


state 32
	virtual_server_arg:  GROUP.STRING 

	STRING  shift 84
	.  error


state 33
	ipport:  ip46.    (302)
	ipport:  ip46.NUMBER 

	NUMBER  shift 85
	.  reduce 302 (src line 371)


state 34
	ip46:  IPV4.    (299)

	.  reduce 299 (src line 367)


state 35
	ip46:  IPV6.    (300)

	.  reduce 300 (src line 368)


state 36
	virtual_server_group_block:  VIRTUAL_SERVER_GROUP STRING.LB virtual_server_group_statements RB 

	LB  shift 86
	.  error


state 37
	global:  GLOBALDEFS LB global_statements.RB 

	RB  shift 87
	.  error


 38: reduce/reduce conflict  (red'ns 15 and 16) on RB
38: shift/reduce conflict (shift 39(0), red'n 16(0)) on NOTIFICATION_EMAIL
38: shift/reduce conflict (shift 40(0), red'n 16(0)) on NOTIFICATION_EMAIL_FROM
38: shift/reduce conflict (shift 45(0), red'n 16(0)) on SMTP_SERVER
38: shift/reduce conflict (shift 46(0), red'n 16(0)) on SMTP_CONNECT_TIMEOUT
38: shift/reduce conflict (shift 47(0), red'n 16(0)) on ROUTER_ID
38: shift/reduce conflict (shift 48(0), red'n 16(0)) on LVS_ID
38: shift/reduce conflict (shift 49(0), red'n 16(0)) on VRRP_MCAST_GROUP4
38: shift/reduce conflict (shift 50(0), red'n 16(0)) on VRRP_MCAST_GROUP6
38: shift/reduce conflict (shift 41(0), red'n 16(0)) on VRRP_GARP_MASTER_DELAY
38: shift/reduce conflict (shift 42(0), red'n 16(0)) on VRRP_GARP_MASTER_REPEAT
38: shift/reduce conflict (shift 43(0), red'n 16(0)) on VRRP_GARP_MASTER_REFRESH
38: shift/reduce conflict (shift 44(0), red'n 16(0)) on VRRP_GARP_MASTER_REFRESH_REPEAT
38: shift/reduce conflict (shift 51(0), red'n 16(0)) on VRRP_VERSION
38: shift/reduce conflict (shift 52(0), red'n 16(0)) on ENABLE_SCRIPT_SECURITY
state 38
	global_statements:  global_statement.global_statements 
	global_statements:  global_statement.    (15)
	global_statement: .    (16)

	NOTIFICATION_EMAIL  shift 39
	NOTIFICATION_EMAIL_FROM  shift 40
	SMTP_SERVER  shift 45
	SMTP_CONNECT_TIMEOUT  shift 46
	ROUTER_ID  shift 47
	LVS_ID  shift 48
	VRRP_MCAST_GROUP4  shift 49
	VRRP_MCAST_GROUP6  shift 50
	VRRP_GARP_MASTER_DELAY  shift 41
	VRRP_GARP_MASTER_REPEAT  shift 42
	VRRP_GARP_MASTER_REFRESH  shift 43
	VRRP_GARP_MASTER_REFRESH_REPEAT  shift 44
	VRRP_VERSION  shift 51
	ENABLE_SCRIPT_SECURITY  shift 52
	.  reduce 15 (src line 44)

	global_statements  goto 88
	global_statement  goto 38

state 39
	global_statement:  NOTIFICATION_EMAIL.LB mail_statements RB 
	global_statement:  NOTIFICATION_EMAIL.STRING 

	STRING  shift 90
	LB  shift 89
	.  error


state 40
	global_statement:  NOTIFICATION_EMAIL_FROM.EMAIL 

	EMAIL  shift 91
	.  error


state 41
	global_statement:  VRRP_GARP_MASTER_DELAY.NUMBER 

	NUMBER  shift 92
	.  error


state 42
	global_statement:  VRRP_GARP_MASTER_REPEAT.NUMBER 

	NUMBER  shift 93
	.  error


state 43
	global_statement:  VRRP_GARP_MASTER_REFRESH.NUMBER 

	NUMBER  shift 94
	.  error


state 44
	global_statement:  VRRP_GARP_MASTER_REFRESH_REPEAT.NUMBER 

	NUMBER  shift 95
	.  error


state 45
	global_statement:  SMTP_SERVER.ip46 
	global_statement:  SMTP_SERVER.STRING 
	ip46: .    (298)

	STRING  shift 97
	IPV4  shift 34
	IPV6  shift 35
	.  reduce 298 (src line 366)

	ip46  goto 96

state 46
	global_statement:  SMTP_CONNECT_TIMEOUT.NUMBER 

	NUMBER  shift 98
	.  error


state 47
	global_statement:  ROUTER_ID.STRING 

	STRING  shift 99
	.  error


state 48
	global_statement:  LVS_ID.STRING 

	STRING  shift 100
	.  error


state 49
	global_statement:  VRRP_MCAST_GROUP4.IPV4 

	IPV4  shift 101
	.  error


state 50
	global_statement:  VRRP_MCAST_GROUP6.IPV6 

	IPV6  shift 102
	.  error


state 51
	global_statement:  VRRP_VERSION.NUMBER 

	NUMBER  shift 103
	.  error


state 52
	global_statement:  ENABLE_SCRIPT_SECURITY.    (32)

	.  reduce 32 (src line 62)


state 53
	static_ipaddress_block:  STATIC_IPADDRESS LB address_options.RB 

	RB  shift 104
	.  error


54: shift/reduce conflict (shift 34(0), red'n 259(0)) on IPV4
54: shift/reduce conflict (shift 35(0), red'n 259(0)) on IPV6
54: shift/reduce conflict (shift 56(0), red'n 259(0)) on IP_CIDR
 54: reduce/reduce conflict  (red'ns 258 and 259) on RB
54: shift/reduce conflict (shift 58(0), red'n 259(0)) on DEV
54: shift/reduce conflict (shift 59(0), red'n 259(0)) on SCOPE
54: shift/reduce conflict (shift 57(0), red'n 259(0)) on BRD
54: shift/reduce conflict (shift 34(0), red'n 298(0)) on IPV4
54: shift/reduce conflict (shift 35(0), red'n 298(0)) on IPV6
54: shift/reduce conflict (shift 56(0), red'n 298(0)) on IP_CIDR
 54: reduce/reduce conflict  (red'ns 258 and 298) on RB
54: shift/reduce conflict (shift 58(0), red'n 298(0)) on DEV
54: shift/reduce conflict (shift 59(0), red'n 298(0)) on SCOPE
54: shift/reduce conflict (shift 57(0), red'n 298(0)) on BRD
state 54
	address_options:  address_option.address_options 
	address_options:  address_option.    (258)
	address_option: .    (259)
	ip46: .    (298)

	IPV4  shift 34
	IPV6  shift 35
	IP_CIDR  shift 56
	DEV  shift 58
	SCOPE  shift 59
	BRD  shift 57
	.  reduce 258 (src line 320)

	ip46  goto 55
	address_options  goto 105
	address_option  goto 54

state 55
	address_option:  ip46.    (260)

	.  reduce 260 (src line 323)


state 56
	address_option:  IP_CIDR.    (261)

	.  reduce 261 (src line 324)


57: shift/reduce conflict (shift 34(0), red'n 298(0)) on IPV4
57: shift/reduce conflict (shift 35(0), red'n 298(0)) on IPV6
state 57
	address_option:  BRD.ip46 
	ip46: .    (298)

	IPV4  shift 34
	IPV6  shift 35
	.  reduce 298 (src line 366)

	ip46  goto 106

state 58
	address_option:  DEV.STRING 

	STRING  shift 107
	.  error


state 59
	address_option:  SCOPE.scope_val 
	scope_val: .    (289)

	SITE  shift 109
	LINK  shift 110
	HOST  shift 111
	NOWHERE  shift 112
	GLOBAL  shift 113
	.  reduce 289 (src line 355)

	scope_val  goto 108

state 60
	static_routes_block:  STATIC_ROUTES LB route_options.RB 

	RB  shift 114
	.  error


61: shift/reduce conflict (shift 34(0), red'n 266(0)) on IPV4
61: shift/reduce conflict (shift 35(0), red'n 266(0)) on IPV6
61: shift/reduce conflict (shift 65(0), red'n 266(0)) on IP_CIDR
61: shift/reduce conflict (shift 70(0), red'n 266(0)) on LABEL
61: shift/reduce conflict (shift 69(0), red'n 266(0)) on DEV
61: shift/reduce conflict (shift 73(0), red'n 266(0)) on SCOPE
61: shift/reduce conflict (shift 62(0), red'n 266(0)) on SRC
61: shift/reduce conflict (shift 63(0), red'n 266(0)) on TO
61: shift/reduce conflict (shift 66(0), red'n 266(0)) on VIA
61: shift/reduce conflict (shift 67(0), red'n 266(0)) on GW
61: shift/reduce conflict (shift 68(0), red'n 266(0)) on OR
61: shift/reduce conflict (shift 71(0), red'n 266(0)) on TABLE
61: shift/reduce conflict (shift 72(0), red'n 266(0)) on METRIC
61: shift/reduce conflict (shift 74(0), red'n 266(0)) on BLACKHOLE
61: shift/reduce conflict (shift 34(0), red'n 267(0)) on IPV4
61: shift/reduce conflict (shift 35(0), red'n 267(0)) on IPV6
61: shift/reduce conflict (shift 65(0), red'n 267(0)) on IP_CIDR
 61: reduce/reduce conflict  (red'ns 266 and 267) on RB
61: shift/reduce conflict (shift 70(0), red'n 267(0)) on LABEL
61: shift/reduce conflict (shift 69(0), red'n 267(0)) on DEV
61: shift/reduce conflict (shift 73(0), red'n 267(0)) on SCOPE
61: shift/reduce conflict (shift 62(0), red'n 267(0)) on SRC
61: shift/reduce conflict (shift 63(0), red'n 267(0)) on TO
61: shift/reduce conflict (shift 66(0), red'n 267(0)) on VIA
61: shift/reduce conflict (shift 67(0), red'n 267(0)) on GW
61: shift/reduce conflict (shift 68(0), red'n 267(0)) on OR
61: shift/reduce conflict (shift 71(0), red'n 267(0)) on TABLE
61: shift/reduce conflict (shift 72(0), red'n 267(0)) on METRIC
61: shift/reduce conflict (shift 74(0), red'n 267(0)) on BLACKHOLE
 61: reduce/reduce conflict  (red'ns 266 and 267) on DELAY_LOOP
 61: reduce/reduce conflict  (red'ns 266 and 267) on LB_ALGO
 61: reduce/reduce conflict  (red'ns 266 and 267) on LB_KIND
 61: reduce/reduce conflict  (red'ns 266 and 267) on LVS_SCHED
 61: reduce/reduce conflict  (red'ns 266 and 267) on LVS_METHOD
 61: reduce/reduce conflict  (red'ns 266 and 267) on PERSISTENCE_TIMEOUT
 61: reduce/reduce conflict  (red'ns 266 and 267) on PROTOCOL
 61: reduce/reduce conflict  (red'ns 266 and 267) on SORRY_SERVER
 61: reduce/reduce conflict  (red'ns 266 and 267) on REAL_SERVER
 61: reduce/reduce conflict  (red'ns 266 and 267) on VIRTUALHOST
 61: reduce/reduce conflict  (red'ns 266 and 267) on ALPHA
 61: reduce/reduce conflict  (red'ns 266 and 267) on OMEGA
 61: reduce/reduce conflict  (red'ns 266 and 267) on QUORUM
 61: reduce/reduce conflict  (red'ns 266 and 267) on HYSTERESIS
 61: reduce/reduce conflict  (red'ns 266 and 267) on QUORUM_UP
 61: reduce/reduce conflict  (red'ns 266 and 267) on QUORUM_DOWN
61: shift/reduce conflict (shift 34(0), red'n 298(0)) on IPV4
61: shift/reduce conflict (shift 35(0), red'n 298(0)) on IPV6
61: shift/reduce conflict (shift 65(0), red'n 298(0)) on IP_CIDR
 61: reduce/reduce conflict  (red'ns 266 and 298) on RB
61: shift/reduce conflict (shift 70(0), red'n 298(0)) on LABEL
61: shift/reduce conflict (shift 69(0), red'n 298(0)) on DEV
61: shift/reduce conflict (shift 73(0), red'n 298(0)) on SCOPE
61: shift/reduce conflict (shift 62(0), red'n 298(0)) on SRC
61: shift/reduce conflict (shift 63(0), red'n 298(0)) on TO
61: shift/reduce conflict (shift 66(0), red'n 298(0)) on VIA
61: shift/reduce conflict (shift 67(0), red'n 298(0)) on GW
61: shift/reduce conflict (shift 68(0), red'n 298(0)) on OR
61: shift/reduce conflict (shift 71(0), red'n 298(0)) on TABLE
61: shift/reduce conflict (shift 72(0), red'n 298(0)) on METRIC
61: shift/reduce conflict (shift 74(0), red'n 298(0)) on BLACKHOLE
 61: reduce/reduce conflict  (red'ns 266 and 298) on DELAY_LOOP
 61: reduce/reduce conflict  (red'ns 266 and 298) on LB_ALGO
 61: reduce/reduce conflict  (red'ns 266 and 298) on LB_KIND
 61: reduce/reduce conflict  (red'ns 266 and 298) on LVS_SCHED
 61: reduce/reduce conflict  (red'ns 266 and 298) on LVS_METHOD
 61: reduce/reduce conflict  (red'ns 266 and 298) on PERSISTENCE_TIMEOUT
 61: reduce/reduce conflict  (red'ns 266 and 298) on PROTOCOL
 61: reduce/reduce conflict  (red'ns 266 and 298) on SORRY_SERVER
 61: reduce/reduce conflict  (red'ns 266 and 298) on REAL_SERVER
 61: reduce/reduce conflict  (red'ns 266 and 298) on VIRTUALHOST
 61: reduce/reduce conflict  (red'ns 266 and 298) on ALPHA
 61: reduce/reduce conflict  (red'ns 266 and 298) on OMEGA
 61: reduce/reduce conflict  (red'ns 266 and 298) on QUORUM
 61: reduce/reduce conflict  (red'ns 266 and 298) on HYSTERESIS
 61: reduce/reduce conflict  (red'ns 266 and 298) on QUORUM_UP
 61: reduce/reduce conflict  (red'ns 266 and 298) on QUORUM_DOWN
state 61
	route_options:  route_option.route_options 
	route_options:  route_option.    (266)
	route_option: .    (267)
	ip46: .    (298)

	IPV4  shift 34
	IPV6  shift 35
	IP_CIDR  shift 65
	LABEL  shift 70
	DEV  shift 69
	SCOPE  shift 73
	SRC  shift 62
	TO  shift 63
	VIA  shift 66
	GW  shift 67
	OR  shift 68
	TABLE  shift 71
	METRIC  shift 72
	BLACKHOLE  shift 74
	.  reduce 266 (src line 329)

	ip46  goto 64
	route_options  goto 115
	route_option  goto 61

62: shift/reduce conflict (shift 34(0), red'n 298(0)) on IPV4
62: shift/reduce conflict (shift 35(0), red'n 298(0)) on IPV6
state 62
	route_option:  SRC.ip46 
	ip46: .    (298)

	IPV4  shift 34
	IPV6  shift 35
	.  reduce 298 (src line 366)

	ip46  goto 116

63: shift/reduce conflict (shift 34(0), red'n 298(0)) on IPV4
63: shift/reduce conflict (shift 35(0), red'n 298(0)) on IPV6
63: shift/reduce conflict (shift 118(0), red'n 298(0)) on IP_CIDR
state 63
	route_option:  TO.ip46 
	route_option:  TO.IP_CIDR 
	ip46: .    (298)

	IPV4  shift 34
	IPV6  shift 35
	IP_CIDR  shift 118
	.  reduce 298 (src line 366)

	ip46  goto 117

state 64
	route_option:  ip46.    (271)

	.  reduce 271 (src line 335)


state 65
	route_option:  IP_CIDR.    (272)

	.  reduce 272 (src line 336)


66: shift/reduce conflict (shift 34(0), red'n 298(0)) on IPV4
66: shift/reduce conflict (shift 35(0), red'n 298(0)) on IPV6
state 66
	route_option:  VIA.ip46 
	ip46: .    (298)

	IPV4  shift 34
	IPV6  shift 35
	.  reduce 298 (src line 366)

	ip46  goto 119

67: shift/reduce conflict (shift 34(0), red'n 298(0)) on IPV4
67: shift/reduce conflict (shift 35(0), red'n 298(0)) on IPV6
state 67
	route_option:  GW.ip46 
	ip46: .    (298)

	IPV4  shift 34
	IPV6  shift 35
	.  reduce 298 (src line 366)

	ip46  goto 120

68: shift/reduce conflict (shift 34(0), red'n 298(0)) on IPV4
68: shift/reduce conflict (shift 35(0), red'n 298(0)) on IPV6
state 68
	route_option:  OR.ip46 
	ip46: .    (298)

	IPV4  shift 34
	IPV6  shift 35
	.  reduce 298 (src line 366)

	ip46  goto 121

state 69
	route_option:  DEV.STRING 

	STRING  shift 122
	.  error


state 70
	route_option:  LABEL.STRING 

	STRING  shift 123
	.  error


state 71
	route_option:  TABLE.NUMBER 
	route_option:  TABLE.STRING 

	NUMBER  shift 124
	STRING  shift 125
	.  error


state 72
	route_option:  METRIC.NUMBER 

	NUMBER  shift 126
	.  error


state 73
	route_option:  SCOPE.scope_val 
	scope_val: .    (289)

	SITE  shift 109
	LINK  shift 110
	HOST  shift 111
	NOWHERE  shift 112
	GLOBAL  shift 113
	.  reduce 289 (src line 355)

	scope_val  goto 127

74: shift/reduce conflict (shift 34(0), red'n 298(0)) on IPV4
74: shift/reduce conflict (shift 35(0), red'n 298(0)) on IPV6
74: shift/reduce conflict (shift 129(0), red'n 298(0)) on IP_CIDR
state 74
	route_option:  BLACKHOLE.ip46 
	route_option:  BLACKHOLE.IP_CIDR 
	ip46: .    (298)

	IPV4  shift 34
	IPV6  shift 35
	IP_CIDR  shift 129
	.  reduce 298 (src line 366)

	ip46  goto 128

state 75
	static_rules_block:  STATIC_RULES LB rule_options.RB 

	RB  shift 130
	.  error


 76: reduce/reduce conflict  (red'ns 37 and 284) on RB
76: shift/reduce conflict (shift 77(0), red'n 284(0)) on FROM
76: shift/reduce conflict (shift 78(0), red'n 284(0)) on TO
state 76
	rule_options:  rule_option.rule_options 
	rule_options:  rule_option.    (37)
	rule_option: .    (284)

	FROM  shift 77
	TO  shift 78
	.  reduce 37 (src line 70)

	rule_options  goto 131
	rule_option  goto 76

state 77
	rule_option:  FROM.ip46 TABLE NUMBER 
	rule_option:  FROM.IP_CIDR TABLE NUMBER 
	ip46: .    (298)

	IPV4  shift 34
	IPV6  shift 35
	IP_CIDR  shift 133
	.  reduce 298 (src line 366)

	ip46  goto 132

state 78
	rule_option:  TO.ip46 TABLE NUMBER 
	rule_option:  TO.IP_CIDR TABLE NUMBER 
	ip46: .    (298)

	IPV4  shift 34
	IPV6  shift 35
	IP_CIDR  shift 135
	.  reduce 298 (src line 366)

	ip46  goto 134

79: shift/reduce conflict (shift 138(0), red'n 41(0)) on STRING
79: shift/reduce conflict (shift 139(0), red'n 41(0)) on GROUP
79: shift/reduce conflict (shift 140(0), red'n 41(0)) on NOTIFY_MASTER
79: shift/reduce conflict (shift 141(0), red'n 41(0)) on NOTIFY_BACKUP
79: shift/reduce conflict (shift 142(0), red'n 41(0)) on NOTIFY_FAULT
79: shift/reduce conflict (shift 143(0), red'n 41(0)) on NOTIFY
state 79
	vrrp_sync_group_block:  VRRP_SYNC_GROUP STRING LB.vrrp_sync_group_statements RB 
	vrrp_sync_group_statement: .    (41)

	STRING  shift 138
	GROUP  shift 139
	NOTIFY_MASTER  shift 140
	NOTIFY_BACKUP  shift 141
	NOTIFY_FAULT  shift 142
	NOTIFY  shift 143
	.  reduce 41 (src line 76)

	vrrp_sync_group_statements  goto 136
	vrrp_sync_group_statement  goto 137
